--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -191,13 +191,11 @@
                         <TextField fx:id="organization" layoutX="233.0" layoutY="313.0" onAction="#validateOrganization" />
                         <TextField fx:id="designation" layoutX="233.0" layoutY="342.0" onAction="#validateDesignation" prefHeight="31.0" prefWidth="161.0" />
                         <TextField fx:id="domain" layoutX="233.0" layoutY="373.0" onAction="#validationDomain" />
-                        <RadioButton fx:id="activeStatus" layoutX="235.0" layoutY="824.0" mnemonicParsing="false" onAction="#validateActiveStatus" text="Active" />
                         <TextField fx:id="suggestion" layoutX="233.0" layoutY="777.0" onAction="#validateSuggestion" />
                         <ChoiceBox fx:id="segmentType" layoutX="230.0" layoutY="748.0" onDragDetected="#validateSegmentType" prefHeight="28.0" prefWidth="150.0" />
                         <TextField fx:id="role" layoutX="233.0" layoutY="426.0" onAction="#validateRole" />
                         <TextField fx:id="experience" layoutX="233.0" layoutY="454.0" onAction="#validateExperience" />
                         <TextField fx:id="createdBy" layoutX="233.0" layoutY="482.0" onAction="#validateCreatedBy" prefHeight="31.0" prefWidth="161.0" />
-                        <RadioButton fx:id="eligibility" layoutX="235.0" layoutY="552.0" mnemonicParsing="false" onAction="#validateEligibility" text="Eligible" />
                         <Label layoutX="41.0" layoutY="664.0" prefHeight="23.0" prefWidth="189.0" text="Date Of Enquiry :">
                            <font>
                               <Font size="18.0" />
@@ -216,6 +214,8 @@
                            </font>
                         </Label>
                         <TextField fx:id="recommendation" layoutX="233.0" layoutY="691.0" onAction="#validateRecommendation" prefHeight="28.0" prefWidth="161.0" />
+                        <CheckBox fx:id="eligible" layoutX="234.0" layoutY="552.0" mnemonicParsing="false" onAction="#validateEligible" text="Eligible" />
+                        <CheckBox fx:id="active" layoutX="237.0" layoutY="824.0" mnemonicParsing="false" onAction="#validateActive" text="Active" />
                      </children>
                   </AnchorPane>
               </content>
